--- a/index.html
+++ b/index.html
@@ -73,13 +73,12 @@
                 <a class="bouton-accueil" href="#contact">Me contacter</a>
                 <a class="bouton-accueil" href="#profil">Qui suis-je?</a>
             </div> 
-
-            <!-- Add event listenner sur la div -->
             
         </div>
 
         <div class="arrow">
-            <a href="#profil"><img src="images/icons/arrow-down.svg" alt=""></div></a>
+            <a href="#profil"><img src="images/icons/arrow-down.svg" alt=""></a>
+        </div>
         
     </div>
 
@@ -91,7 +90,7 @@
             <div class="contenu"></div>
             <div class="texte">
                 <h1>Lorem Ipsum</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, repudiandae commodi obcaecati quas veritatis cum. Commodi nam aliquam neque itaque obcaecati magnam nesciunt distinctio reiciendis corporis, voluptatum cumque, ipsam ipsa earum molestiae repellat enim perferendis delectus atque numquam laudantium nisi asperiores voluptatibus iste! Temporibus, in? Architecto obcaecati voluptatum iusto deserunt in nisi omnis quae? Odit fugiat tempora a illo unde, nostrum maiores iusto. Praesentium, atque consequuntur voluptate veniam nesciunt, illo quis ut rem, id ducimus non. Itaque quas veniam maxime, corrupti praesentium libero doloribus enim placeat voluptatum labore, nam quia reprehenderit nobis eos voluptates assumenda sit esse, cum nesciunt voluptatem!</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, repudiandae commodi obcaecati quas veritatis cum. Commodi nam aliquam neque itaque obcaecati magnam nesciunt distinctio reiciendis corporis, voluptatum cumque, ipsam ipsa earum molestiae repellat enim perferendis delectus atque numquam laudantium nisi asperiores voluptatibus iste! Temporibus, in? Architecto obcaecati volupetatum iusto deserunt in nisi omnis quae? Odit fugiat tempora a illo unde, nostrum maiores iusto. Praesentium, atque consequuntur voluptate veniam nesciunt, illo quis ut rem, id ducimus non. Itaque quas veniam maxime, corrupti praesentium libero doloribus enim placeat voluptatum labore, nam quia reprehenderit nobis eos voluptates assumenda sit esse, cum nesciunt voluptatem!</p>
             </div>
         </div>
 
